<resources>

    <string name="app_name">Job Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="keywordLabel">Keyword</string>
    <string name="locationLabel">Location</string>
    <string name="submitLabel">Search</string>
    
    <string name="title_activity_jobsList">List of Jobs</string>
    <string name="jobTitle">job title</string>
    <string name="jobPoster">company</string>
    <string name="jobLocation">location</string>
    
    <string name="title_activity_jobDetails">Job Details</string>
    <string name="jobDesc">description teaser</string>
    <string name="jobPostedTime">posted time</string>
    <string name="jobLink">link to this job</string>
    <string name="simJobsLink">link to similar jobs</string>

</resources>